--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -4,6 +4,12 @@
 - skill: Education
   description: Developed and maintained various conference talks, online training, and in-person trainings covering various topics including Git, GitHub, and Open Source.
 
+#Coding
+- skill: Django
+  description: Made a full-stack Django app
+- skill: ReactJS
+  description: Build a front-end UI with React
+
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
